--- a/conf/configES.json
+++ b/conf/configES.json
@@ -1,8 +1,8 @@
 const config = {
-	"sitio": ["ATI","[UCV]","2024-1"],
+	"sitio": ["ATI","[UCV]","2025-2"],
 	"home": "Inicio",
 	"login": "Entrar",
-	"copyRight":"Copyright © 2024 Escuela de computación - ATI. Todos los derechos reservados",
+	"copyRight":"Copyright © 2025 Escuela de computación - ATI. Todos los derechos reservados",
 	"nombre":"Nombre",
 	"descripcion":"",
 	"color":"Mi color favorito es",
@@ -12,5 +12,6 @@ const config = {
 	"lenguajes":"Lenguajes aprendidos",
 	"email":"Si necesitan comunicarse conmigo me pueden escribir a [email]",
 	"buscar": "Buscar",
-	"saludo": "Hola"
+	"saludo": "Hola",
+	"noResultados" : "No hay alumnos que tengan en su nombre: [query]"
 }
