--- a/conf/configPT.json
+++ b/conf/configPT.json
@@ -1,16 +1,17 @@
 const config = {
-	"sitio": ["ATI","[UCV]","2024-1"],
+	"sitio": ["ATI","[UCV]","2025-2"],
 	"home": "Início",
 	"login": "Sessão",
-	"copyRight":"Copyright © 2024 Escola de informática - ATI. Todos os direitos reservados",
-	"nombre":"Nome",
-	"descripcion":"",
-	"color":"Minha cor favorita é",
-	"libro":"Meu livro favorito é",
-	"musica":"Meu estilo de música favorita",
-	"video_juego":"Jogos de vídeo favoritos",
-	"lenguajes":"Linguagems aprendidas",
-	"email":"Se precisar me contatar pode me escrever em [email]",
+	"copyRight": "Copyright © 2025 Escola de informática - ATI. Todos os direitos reservados",
+	"nombre": "Nome",
+	"descripcion": "",
+	"color": "Minha cor favorita é",
+	"libro": "Meu livro favorito é",
+	"musica": "Meu estilo de música favorita",
+	"video_juego": "Jogos de vídeo favoritos",
+	"lenguajes": "Linguagems aprendidas",
+	"email": "Se precisar me contatar pode me escrever em [email]",
 	"buscar": "Procurar",
-	"saludo": "Olá"
+	"saludo": "Olá",
+	"noResultados": "Não há alunos com este nome: [query]"
 }
